[package]
edition      = "2024"
name         = "cloudy-with-a-chance-of-rust"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "cloudy-with-a-chance-of-rust"
path = "./src/main.rs"

[dependencies]
der = {version = "0.8.0", default-features = false, features = ["heapless"]}
esp-hal = { version = "~1.1.0", features = ["esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6"] }

embassy-net = { version = "0.9.1", features = ["dhcpv4", "medium-ethernet", "tcp", "udp", "dns"] }

esp-alloc = "0.10.0"
rtt-target = "0.6.2"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32c6",
  "unstable",
  "wifi",
] }

static_cell      = "2.1.1"

epd-waveshare = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.2"

tinybmp = "0.7.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
reqwless = { version = "0.14.0", default-features = false, features = [
  "embedded-tls",
  "alloc",
] }
# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
